[package]
name = "gbrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
num-derive = "0.3.3"
num-traits = "0.2.15"
thiserror = "1.0.38"
