[package]
name = "gbrust"
version = "0.1.0"
edition = "2021"
default-run = "gameboy"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
sixel = ["dep:sixel-rs"]

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
hex-literal = "0.4.1"
itertools = "0.10.5"
ncurses = { version = "5.101.0", features = ["wide", "extended_colors"] }
num-derive = "0.3.3"
num-traits = "0.2.15"
sha2 = "0.10.6"
sixel-rs = { version = "0.3.3", optional = true }
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
terminal = "0.2.1"
thiserror = "1.0.38"
